feat: Implement dual mode authentication & data masking
✅ CRITICAL: Dual Mode Authentication
- InternalAuthenticationFilter: Support internal key OR JWT (not exclusive)
- If internal key present & valid → authenticate with internal context
- If internal key missing → fall through to JWT authentication
- This fixes 401 errors during onboarding (internal) & normal flows (JWT)

✅ Security Enhancements:
- Added @InternalEndpoint to 10 dual mode endpoints (company & contact)
- Dual mode now works: onboarding uses internal key, UI uses JWT
- Created DataMaskingUtil for privacy-compliant data handling
- Applied masking to similar companies endpoint (tax ID, legal name)

✅ Documentation & Tools:
- Created docs/TODO/ folder with production security migration roadmap
- Created ROLES_QUICK_REFERENCE.md for system role hierarchy
- Created AI_ASSISTANT_CRITICAL_LESSONS.md (self-reflection on Hibernate)
- Created KafkaTopics constants class (zero hardcoded values)

✅ Bug Fixes:
- Fixed event field name mismatches (CompanyCreatedEvent)
- Fixed UserMapper: removed manual ID & version management (Hibernate conflict)
- Fixed PolicyValidationFilter: companyType fallback to INTERNAL
- Fixed V8 migration: ADMIN role → TENANT_ADMIN role
- Added PasswordNotSetException for clear login error messages
- Fixed autocomplete param in Postman (query → q)

✅ Postman Collection:
- Public endpoints now use noauth (register, login, check-contact)
- Protected endpoints inherit collection-level bearer auth
- Smart company management hierarchy with 17 endpoints
- Auto-save tokens, flow-based testing

🎯 Impact:
- Tenant onboarding: WORKS with internal key
- Company creation (JWT): WORKS with user token
- Similar search: Privacy-compliant with masked data
- Zero production security blockers (documented migration plan)

Manifesto: ZERO HARDCODED VALUES | GOOGLE/AMAZON LEVEL |
PRODUCTION-READY | CLEAN CODE | SOLID | DRY | KISS

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,10 @@ volumes:
     driver: local
   redis_data:
     driver: local
+  kafka_data:
+    driver: local
+  zookeeper_data:
+    driver: local
 
 services:
   # ==============================================
@@ -119,8 +123,12 @@ services:
     environment:
       ZOOKEEPER_CLIENT_PORT: ${ZOOKEEPER_PORT:-2181}
       ZOOKEEPER_TICK_TIME: 2000
+      ZOOKEEPER_DATA_DIR: /var/lib/zookeeper/data
+      ZOOKEEPER_DATA_LOG_DIR: /var/lib/zookeeper/log
     ports:
       - "${ZOOKEEPER_PORT:-2181}:2181"
+    volumes:
+      - zookeeper_data:/var/lib/zookeeper/data
     networks:
       - fabric-network
     healthcheck:
@@ -143,7 +151,8 @@ services:
     container_name: fabric-kafka
     restart: unless-stopped
     depends_on:
-      - zookeeper
+      zookeeper:
+        condition: service_healthy
     ports:
       - "${KAFKA_PORT:-9092}:9092"
     environment:
@@ -156,7 +165,11 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      # ✅ Keep auto-create for backward compatibility, but init script is preferred
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+      KAFKA_LOG_DIRS: /var/lib/kafka/data
+    volumes:
+      - kafka_data:/var/lib/kafka/data
     networks:
       - fabric-network
     healthcheck:
@@ -179,6 +192,69 @@ services:
         reservations:
           memory: 512M
           cpus: "0.5"
+
+  # ==============================================
+  # KAFKA TOPIC INIT (Idempotent)
+  # ==============================================
+  kafka-init:
+    image: confluentinc/cp-kafka:7.5.0
+    container_name: fabric-kafka-init
+    depends_on:
+      kafka:
+        condition: service_healthy
+    networks:
+      - fabric-network
+    entrypoint: ["/bin/sh", "-c"]
+    command:
+      - |
+        echo "🔍 Waiting for Kafka to be ready..."
+        sleep 5
+
+        echo "📨 Creating Kafka topics (idempotent)..."
+
+        # User Service Topics
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic user.created --partitions 3 --replication-factor 1 --config retention.ms=604800000
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic user.updated --partitions 3 --replication-factor 1 --config retention.ms=604800000
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic user.deleted --partitions 3 --replication-factor 1 --config retention.ms=604800000
+
+        # Company Service Topics
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic company-events --partitions 3 --replication-factor 1 --config retention.ms=604800000
+
+        # Contact Service Topics
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic contact.created --partitions 3 --replication-factor 1 --config retention.ms=604800000
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic contact.verified --partitions 3 --replication-factor 1 --config retention.ms=604800000
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic contact.deleted --partitions 3 --replication-factor 1 --config retention.ms=604800000
+
+        # Tenant Onboarding Topics
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic tenant-events --partitions 3 --replication-factor 1 --config retention.ms=604800000
+
+        # Policy & Audit Topics
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic policy.audit --partitions 3 --replication-factor 1 --config retention.ms=2592000000
+
+        # Notification Service Topics
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic email-notifications --partitions 3 --replication-factor 1 --config retention.ms=604800000
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic sms-notifications --partitions 3 --replication-factor 1 --config retention.ms=604800000
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic domain-events --partitions 3 --replication-factor 1 --config retention.ms=604800000
+
+        # DLT Topics (Dead Letter Topics)
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic user.created.DLT --partitions 1 --replication-factor 1 --config retention.ms=7776000000
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic user.updated.DLT --partitions 1 --replication-factor 1 --config retention.ms=7776000000
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic user.deleted.DLT --partitions 1 --replication-factor 1 --config retention.ms=7776000000
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic company-events.DLT --partitions 1 --replication-factor 1 --config retention.ms=7776000000
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic contact.created.DLT --partitions 1 --replication-factor 1 --config retention.ms=7776000000
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic contact.verified.DLT --partitions 1 --replication-factor 1 --config retention.ms=7776000000
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic contact.deleted.DLT --partitions 1 --replication-factor 1 --config retention.ms=7776000000
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic tenant-events.DLT --partitions 1 --replication-factor 1 --config retention.ms=7776000000
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic policy.audit.DLT --partitions 1 --replication-factor 1 --config retention.ms=7776000000
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic email-notifications.DLT --partitions 1 --replication-factor 1 --config retention.ms=7776000000
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic sms-notifications.DLT --partitions 1 --replication-factor 1 --config retention.ms=7776000000
+        kafka-topics --bootstrap-server kafka:9093 --create --if-not-exists --topic domain-events.DLT --partitions 1 --replication-factor 1 --config retention.ms=7776000000
+
+        echo "✅ Kafka topics created successfully!"
+
+        echo "📋 Current topics:"
+        kafka-topics --bootstrap-server kafka:9093 --list
+    restart: "no"
 
   # ==============================================
   # API GATEWAY - Central Entry Point
@@ -285,7 +361,10 @@ services:
       PLATFORM_SMTP_USERNAME: ${PLATFORM_SMTP_USERNAME:-info@storeandsale.shop}
       PLATFORM_SMTP_PASSWORD: ${PLATFORM_SMTP_PASSWORD}
       PLATFORM_EMAIL_FROM: ${PLATFORM_EMAIL_FROM:-info@storeandsale.shop}
-      PLATFORM_EMAIL_FROM_NAME: ${PLATFORM_EMAIL_FROM_NAME:-Fabricode}
+      PLATFORM_EMAIL_FROM_NAME: ${PLATFORM_EMAIL_FROM_NAME:-FabriCode}
+      # ✅ Platform Branding (for system emails)
+      PLATFORM_NAME: ${PLATFORM_NAME:-FabriCode}
+      PLATFORM_COMPANY: ${PLATFORM_COMPANY:-Akkayalar Group}
       # ✅ Platform WhatsApp Configuration (Meta Cloud API)
       PLATFORM_WHATSAPP_ENABLED: ${PLATFORM_WHATSAPP_ENABLED:-true}
       PLATFORM_WHATSAPP_PROVIDER: ${PLATFORM_WHATSAPP_PROVIDER:-META}
